1.14.8
------

1.14.7
------
(RB=266640)
Add support of enum array in parameter's default value.

(RB=264605)
Added test utilities that can be used by application developers to test their Rest.li clients and servers.

1.14.6
------
(RB=268867)
Add dataTemplate to generateRestClient classpath for smaller Java binding.

(RB=270034)
Deprecate R2 RPC.

1.14.5
------
(RB=268683)
Fix bug in Data to Avro schema translation in which assertion will be thrown if the same record schema is included
more than once, and that schema contains fields that either have a default value or is optional.

1.14.4
------
(RB=267118)
Making request execution report generated only for debug requests.

(RB=265900)
Fix a bug where documentation strings would not show up in idls/snapshots when a method parameter was an array.

1.14.3
------
(RB=264806)
Fix a bug where RecordTemplates in Array parameters were not validated.

(RB=253429)
Add support of reading symbolic link in Zookeeper.

(RB=264751)
Fix bug that single element is added to query param.

1.14.2
------
(RB=264174)
Increment parseq version which removes unservable files from the tracevis tar ball.

(RB=264173)
Use ProtocolVersionUtil to get protocol version in ErrorResponseBuilder.

1.14.1
------
(RB=262805)
Adding set method for Rest.li debug request handlers on Rest.li server config.

(RB=262459)
Adding a temporary fix to ignore the unused folders in the parseq-tracevis artifact in maven central.

(RB=260228)
Adding debug request handler support to Rest.Li. Introducing a new debug request handler: Parseq Trace Debug Request Handler.

(RB=261581)
Fix header display bug in docgen resource page.

1.14.0
------
(RB=258481)
Create enum for Rest.li protocol versions.

(RB=258219)
Replace hand written data templates with generated ones.

(RB=259104)
Move AllProtocolVersions from com.linkedin.restli.common.internal to com.linkedin.restli.internal.common.

(RB=258733)